files/nano/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        imagePullPolicy: Always
        image: bigfleet/nd-backend:v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - port: 8081
      targetPort: 8080
  type: LoadBalancer
