files/nano/trial.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trial-app
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trial
  template:
    metadata:
      labels:
        app: trial
    spec:
      containers:
      - name: trial
        imagePullPolicy: Always
        image: bigfleet/jaeger-trial:v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: trial-service
spec:
  selector:
    app: trial
  ports:
    - port: 8082
      targetPort: 8080
  type: LoadBalancer
